# english_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
app/: config.py
app/bot/: create_bot.py
app/bot/services/: llm_service.py
app/bot/user/: kbs.py  router.py
app/bot/utils/: exceptions.py
app/bot/word/: __init__.py  kbs.py  router.py  schemas.py  service.py
app/dao/: base.py  dao.py  database.py  models.py
app/migration/: env.py
app/migration/versions/: 0709161a113d_add_sentences_text_to_words_drop_.py  21edf9a13552_initial_revision.py  b2fecb4cf748_add_sentences_table.py
